--- a/report/Comparative Study about intelligent Agent on RDF's graph.tex
+++ b/report/Comparative Study about intelligent Agent on RDF's graph.tex
@@ -370,7 +370,7 @@ Stefan Schlobach
 			To prove this, we have been using Gephi\footnote{
 				Here is the software website \url{https://gephi.github.io/}
 			} to dig out some figures from our graphs.
-			The more representation figures were the betweenness centrality and the number of components.
+			The more representative figures were the betweenness centrality and the number of components.
 			The work on the graph is based on the content of the class ``Networks ans graphs'' followed this year,
 			which was referenced on this book \cite{Steen10}.\\
 		\newline
