--- a/report/Comparative Study about intelligent Agent on RDF's graph.tex
+++ b/report/Comparative Study about intelligent Agent on RDF's graph.tex
@@ -376,7 +376,7 @@ Stefan Schlobach
 		\newline
 			To be more clear about the test, here is the followed protocol:
 			\begin{itemH}
-				\item Changing the number of steps before death for an agent in the code
+				\item Changing in the code the number of steps before death for an agent
 				(could be implemented later in the evaluation module).
 				\item Server initialization
 				\begin{itemh}
